# annulateur

./: .gitignore  README.md  package.json
backend/: asio_adapter.js  package.json  server.js
backend/asio/: CMakeLists.txt  asio.h  asio_processor.cpp  asiodrivers.h  asiolist.cpp  asiotypes.h  binding.gyp  iasiodrv.cpp  iasiodrv.h
frontend/: package.json  vite.config.js
frontend/public/: index.html
frontend/src/: App.jsx  canceller.tsx  index.css
frontend/src/components/: VUMeter.tsx
